--- a/.github/workflows/steam-workshop.yml
+++ b/.github/workflows/steam-workshop.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
 
     - name: Download the release asset
       run: |
@@ -19,11 +19,11 @@ jobs:
         unzip "release.zip" -d "release/"
 
     - name: Upload
-      uses: Weilbyte/steam-workshop-upload@v1
+      uses: hmlendea/steam-workshop-update@v1.0.0
       with:
         appid: 281990
         itemid: 2040215185
-        path: "release/"
+        path: "release/ui-star-names/"
         changenote: "[url=https://github.com/hmlendea/stellaris-ui-star-names/releases/tag/${{github.ref_name}}]Version ${{github.ref_name}}[/url]"
       env:
         STEAM_USERNAME: ${{secrets.STEAM_USERNAME}}
