--- a/.github/workflows/nexus-mods.yml
+++ b/.github/workflows/nexus-mods.yml
@@ -17,7 +17,7 @@ jobs:
       run: wget "https://github.com/hmlendea/stellaris-ui-star-names/releases/download/${{github.ref_name}}/ui-star-names_${GITHUB_REF:11}.zip" -O "release.zip"
 
     - name: Upload
-      uses: hmlendea/nexusmods-update@v1.0.0
+      uses: hmlendea/nexusmods-update@latest
       with:
         account_email_address: ${{secrets.NEXUS_UPLOADER_USERNAME}}
         account_password: ${{secrets.NEXUS_UPLOADER_PASSWORD}}
