--- a/.github/workflows/steam-workshop.yml
+++ b/.github/workflows/steam-workshop.yml
@@ -28,4 +28,4 @@ jobs:
       env:
         STEAM_USERNAME: ${{secrets.STEAM_USERNAME}}
         STEAM_PASSWORD: ${{secrets.STEAM_PASSWORD}}
-        STEAM_TFASEED: ${{secrets.STEAM_2FA_SEED}}
+        STEAM_2FASEED: ${{secrets.STEAM_2FA_SEED}}
